--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fp",
+  "name": "portfolio-website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.2"
+    "@heroicons/react": "^2.0.18",
+    "aos": "^2.3.4",
+    "eslint": "8.47.0",
+    "eslint-config-next": "13.4.15",
+    "framer-motion": "^10.16.1",
+    "next": "^15.1.1-canary.21",
+    "postcss": "^8.4.49",
+    "react": "^18.2.0",
+    "react-animated-numbers": "^0.16.0",
+    "react-dom": "^18.2.0",
+    "react-type-animation": "^3.1.0",
+    "resend": "^1.0.0",
+    "tailwindcss": "3.3.3",
+    "update": "^0.7.4"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.2",
-    "@eslint/eslintrc": "^3"
+    "autoprefixer": "^10.4.20"
   }
 }
