--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "font-awesome": "^4.7.0",
     "framer-motion": "^11.15.0",
     "next": "15.1.3",
     "react": "^19.0.0",
